--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prop-types": "^15.7.2",
     "notistack": "^1.0.10"
   },
-  "homepage": "https://clearmatics.github.io/autonity-uniswap-interface/",
+  "homepage": "https://github.com/tgcooldev/autonity-uniswap-interface/",
   "scripts": {
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
